package hasher;

import "google/protobuf/empty.proto";

service HashedPasswordGenerator {
  rpc GeneratePassword(google.protobuf.Empty) returns (stream HashedPassword) {}
}

message HashedPassword {
   optional int32 index = 1;
   required string password = 2;
   required string hash = 3;
}